[package]
name = "redis-event"
version = "1.0.0"
authors = ["maplestoria <zkx6648@gmail.com>"]
edition = "2018"
description = "用于监听Redis的写入操作，据此可以实现数据复制，监控等相关的应用"
homepage = "https://github.com/maplestoria/redis-event"
documentation = "https://docs.rs/redis-event"
readme = "README.md"
keywords = ["redis", "redis-replication", "replication"]
repository = "https://github.com/maplestoria/redis-event"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.2"
log = "0.4"
lazy_static = "1.4.0"

[dev-dependencies]
serial_test = "0.3.2"
redis = "0.14.0"