[package]
name = "redis-event"
version = "1.2.1"
authors = ["maplestoria <zkx6648@gmail.com>"]
edition = "2018"
description = "用于监听Redis的写入操作，据此可以实现数据复制，监控等相关的应用"
homepage = "https://github.com/maplestoria/redis-event"
documentation = "https://docs.rs/redis-event"
readme = "README.md"
keywords = ["redis", "redis-replication", "replication"]
repository = "https://github.com/maplestoria/redis-event"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.2"
log = "0.4"
lazy_static = "1.4.0"
native-tls = { version = "0.2", optional = true }
scheduled-thread-pool = "0.2.4"

[features]
default = []
tls = [ "native-tls" ]

[dev-dependencies]
serial_test = "0.3.2"
net2 = "0.2"
redis = { version = "0.17.0", features = [ "async-std-tls-comp", "tokio-tls-comp"]}
num-bigint = "0.2.6"
num-traits = "0.2.11"
tempdir = "0.3"
rand = "0.7"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }