[package]
name = "redis-event"
version = "1.2.1"
authors = ["maplestoria <zkx6648@gmail.com>"]
edition = "2024"
description = "用于监听Redis的写入操作，据此可以实现数据复制，监控等相关的应用"
homepage = "https://github.com/maplestoria/redis-event"
documentation = "https://docs.rs/redis-event"
readme = "README.md"
keywords = ["redis", "redis-replication", "replication"]
repository = "https://github.com/maplestoria/redis-event"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.2"
log = "0.4"
lazy_static = "1.4.0"
native-tls = "0.2"
scheduled-thread-pool = "0.2.4"

[dev-dependencies]
serial_test = "0.3.2"
net2 = "0.2"
redis = "0.24"
num-bigint = "0.2.6"
num-traits = "0.2.11"
tempdir = "0.3"
rand = "0.7"
env_logger = "0.11.7"
ctor = "0.4.1"
